Fixed spacing on mobile footer

--- a/css/main.css
+++ b/css/main.css
@@ -451,7 +451,7 @@ br {
 }
 
 .number {
-  margin-top: calc(max(50px, 0.5vh) + 10px);
+  margin-top: 50px;
   margin-bottom: -32.5px;
 }
 
@@ -465,10 +465,16 @@ br {
 }
 
 @media (max-width: 900px) {
+  .small-spacer {
+    padding-bottom: 15px;
+  }
   .number {
-    margin: 10px 0 -15px 0;
+    margin: 50px 0 -15px 0;
     text-decoration: none;
     color: var(--white);
+  }
+  .social-link > img {
+    padding-top: 10px;
   }
   .contact-page {
     line-height: 2.5rem;
